@@ -1,0 +1,281 @@
+/* XPM */
+static char *emms_xpm[] = {
+/* width height num_colors chars_per_pixel */
+"    18    18      256            2",
+/* colors */
+"`` c #340234",
+"`. c #44928c",
+"`# c #74c2c4",
+"`a c #bcc2bc",
+"`b c #d4e2e4",
+"`c c #bc82bc",
+"`d c #a4a2a4",
+"`e c #4c4a44",
+"`f c #e4f2e4",
+"`g c #ac42ac",
+"`h c #e4c2e4",
+"`i c #d4a2d4",
+"`j c #a462ac",
+"`k c #c4d2e4",
+"`l c #ece6e4",
+"`m c #b4b2ac",
+"`n c #d49ad4",
+"`o c #cc62cc",
+"`p c #ecf2ec",
+"`q c #dceaec",
+"`r c #bca6cc",
+"`s c #c4cae4",
+"`t c #d4d2e4",
+"`u c #ecfafc",
+"`v c #a49a94",
+"`w c #bccadc",
+"`x c #e4e2dc",
+"`y c #646264",
+"`z c #848284",
+"`A c #a4aebc",
+"`B c #e4d2dc",
+"`C c #b472b4",
+"`D c #ac52ac",
+"`E c #949294",
+"`F c #fcd2fc",
+"`G c #d4b6d4",
+"`H c #9c1e94",
+"`I c #c4b2d4",
+"`J c #dc72dc",
+"`K c #d4dae4",
+"`L c #a4aaa4",
+"`M c #bc66b4",
+"`N c #eceaf4",
+"`O c #fcfafc",
+"`P c #bc96c4",
+"`Q c #747274",
+"`R c #c4c2d4",
+"`S c #d4e2f4",
+"`T c #ac4aac",
+"`U c #ec8ae4",
+"`V c #fcf2fc",
+"`W c #e4dedc",
+"`X c #ac32ac",
+"`Y c #cc82cc",
+"`Z c #fcaaf4",
+"`0 c #ccdadc",
+"`1 c #f4f2ec",
+"`2 c #e4eaec",
+"`3 c #cca2cc",
+"`4 c #cccacc",
+"`5 c #e4e6f4",
+"`6 c #9c9a8c",
+"`7 c #e476dc",
+"`8 c #d4daf4",
+".` c #9c429c",
+".. c #dcfae4",
+".# c #bc42b4",
+".a c #b46eb4",
+".b c #acb2cc",
+".c c #f4faf4",
+".d c #9c8a8c",
+".e c #a43aa4",
+".f c #c4c2c4",
+".g c #c482bc",
+".h c #a4a6b4",
+".i c #5c5e5c",
+".j c #b442ac",
+".k c #d4aed4",
+".l c #b462b4",
+".m c #ccd2e4",
+".n c #fce6fc",
+".o c #c4a6c4",
+".p c #b496ac",
+".q c #e4e6ec",
+".r c #6c6a6c",
+".s c #b4aebc",
+".t c #bc7abc",
+".u c #c452bc",
+".v c #fcdafc",
+".w c #e4bae4",
+".x c #bcbebc",
+".y c #dcdadc",
+".z c #acaaac",
+".A c #fceefc",
+".B c #cc9ecc",
+".C c #7c7a7c",
+".D c #dce2f4",
+".E c #f496ec",
+".F c #ecdee4",
+".G c #f4f6fc",
+".H c #9c9a9c",
+".I c #b4fefc",
+".J c #dce2dc",
+".K c #a4a6a4",
+".L c #ece2f4",
+".M c #dc9edc",
+".N c #dc6ed4",
+".O c #dceeec",
+".P c #d4d6e4",
+".Q c #ac9e9c",
+".R c #c4cadc",
+".S c #e4e6e4",
+".T c #8c8a8c",
+".U c #acaacc",
+".V c #e4d6dc",
+".W c #a45eac",
+".X c #dcbedc",
+".Y c #cc7ec4",
+".Z c #c46ec4",
+".0 c #eceafc",
+".1 c #fcfef4",
+".2 c #c49ac4",
+".3 c #c4c6dc",
+".4 c #e4daec",
+".5 c #f4f6f4",
+".6 c #e4eeec",
+".7 c #cccadc",
+".8 c #e47edc",
+"#` c #e4faf4",
+"#. c #b4c2d4",
+"## c #64025c",
+"#a c #c476c4",
+"#b c #b43aac",
+"#c c #545254",
+"#d c #d4fefc",
+"#e c #f492ec",
+"#f c #942694",
+"#g c #f49ef4",
+"#h c #c4cafc",
+"#i c #ccaacc",
+"#j c #bcbed4",
+"#k c #dc96dc",
+"#l c #b44eb4",
+"#m c #b4b2d4",
+"#n c #dcaadc",
+"#o c #f4e6fc",
+"#p c #d466cc",
+"#q c #ccdeec",
+"#r c #c4aad4",
+"#s c #dcdeec",
+"#t c #ac62b4",
+"#u c #ac5eb4",
+"#v c #ec7ee4",
+"#w c #e4f2f4",
+"#x c #645e5c",
+"#y c #b4b6b4",
+"#z c #a49e9c",
+"#A c #84867c",
+"#B c #dc76d4",
+"#C c #bc6abc",
+"#D c #eceeec",
+"#E c #ccced4",
+"#F c #f4fefc",
+"#G c #c4c6c4",
+"#H c #ccd6e4",
+"#I c #c4aacc",
+"#J c #dcdee4",
+"#K c #acaeac",
+"#L c #dce6f4",
+"#M c #9c9e9c",
+"#N c #bc86bc",
+"#O c #ac46ac",
+"#P c #d4a6d4",
+"#Q c #ecfefc",
+"#R c #646664",
+"#S c #949694",
+"#T c #fcd6fc",
+"#U c #d4bad4",
+"#V c #c4b6d4",
+"#W c #747674",
+"#X c #ac36ac",
+"#Y c #cc86cc",
+"#Z c #9c8e8c",
+"#0 c #a43ea4",
+"#1 c #b466b4",
+"#2 c #6c6e6c",
+"#3 c #bc7ebc",
+"#4 c #fcdefc",
+"#5 c #7c7e7c",
+"#6 c #c4cedc",
+"#7 c #acaecc",
+"#8 c #b4b6d4",
+"a` c #d4e2ec",
+"a. c #ecf2f4",
+"a# c #dceaf4",
+"aa c #d4d2ec",
+"ab c #e4e2e4",
+"ac c #c4c2dc",
+"ad c #e4dee4",
+"ae c #fcaafc",
+"af c #f4f2f4",
+"ag c #e4eaf4",
+"ah c #e4e6fc",
+"ai c #d4dafc",
+"aj c #f4fafc",
+"ak c #c4c2cc",
+"al c #c482c4",
+"am c #b442b4",
+"an c #dce2fc",
+"ao c #9c9aa4",
+"ap c #a4a6ac",
+"aq c #e4d6e4",
+"ar c #fcfefc",
+"as c #c49acc",
+"at c #ccd6ec",
+"au c #acaeb4",
+"av c #000000",
+"aw c #000000",
+"ax c #000000",
+"ay c #000000",
+"az c #000000",
+"aA c #000000",
+"aB c #000000",
+"aC c #000000",
+"aD c #000000",
+"aE c #000000",
+"aF c #000000",
+"aG c #000000",
+"aH c #000000",
+"aI c #000000",
+"aJ c #000000",
+"aK c #000000",
+"aL c #000000",
+"aM c #000000",
+"aN c #000000",
+"aO c #000000",
+"aP c #000000",
+"aQ c #000000",
+"aR c #000000",
+"aS c #000000",
+"aT c #000000",
+"aU c #000000",
+"aV c #000000",
+"aW c #000000",
+"aX c #000000",
+"aY c #000000",
+"aZ c #000000",
+"a0 c #000000",
+"a1 c #000000",
+"a2 c #000000",
+"a3 c #000000",
+"a4 c #000000",
+"a5 c #000000",
+"a6 c #000000",
+"a7 c #000000",
+"a8 c #000000",
+/* pixels */
+"ararar.X.2.k.w#4.v.w#P.B`3`i#nararar",
+"#G`l`fal#0#f#l#k.M#a#Y`n#n`h.earab.f",
+"#Aahar#k`Harar`O`V.A.n.v`F#T.#arar.r",
+"`6#har.p.sae`Z#g#e`U#v`7.N.N.`.jar.C",
+"`6ai.z.L`3`o.j#O`D#u`C`cas#1`Y#Kar#W",
+"`v`#ahaa#i`X..#``q#w`u#Faral#1ar`4`z",
+"`z`t#6#q#r#X.F.6.S`Naj.Gar.g.l.6af#R",
+"`Q`s`R`K`I`X.4.5ar.J#Uarar.t#1a`ag`y",
+"au.U.b.R#I`X.6ar#y`a`L`B#F#3.l#Hac#M",
+".x#m#j`k#V`X`1ar##``arar.W.Z#u`w.b.z",
+"#K.3#E`r#1.jaq`4#D#Dar#N#v.8.a#.#7`E",
+".i.Ga`.#.E.u.5`B#Far.G`c#p`J`j#6ai`e",
+"#5.y`b#b#B`g.L#F.q.qa#aa#C.g#E`0ak.r",
+".Q`.`O`P.Y`G.c`2ad`t#sa`.Dad.yaf#S`z",
+".d#d#xarar.cagad.m.3.R#H#Haa#o.iar.C",
+"#Z.Iar.C.xar`5.mac#8.b.3.D`A.Carar.C",
+".r#Fararad.H.z.x#s.m.hao#Mabararar#c",
+"#G.H.H.H#M.K#K`d#M#z`d`m.K#z.H.H#S.f"
+};
